--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,10 @@
       rel="stylesheet"
     />
     <!--Import materialize.css-->
+    <!-- Compiled and minified CSS -->
     <link
-      type="text/css"
       rel="stylesheet"
-      href="css/materialize.min.css"
-      media="screen,projection"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
 
     <!--
